# real-time-ohlc

./: .gitignore  README.md  quix.yaml
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml  redpanda.yml
services/features_dashboard/: Makefile  pyproject.toml
services/features_dashboard/src/: backend.py  config.py  frontend.py  plot.py
services/kafka_to_feature_store/: Dockerfile  Makefile  app.yaml  pyproject.toml
services/kafka_to_feature_store/src/: app.yaml  config.py  hopsworks_api.py  main.py
services/price_predictor/: Dockerfile  Makefile  app.yaml  data.csv  lasso_model.pkl  pyproject.toml
services/price_predictor/noteboooks/: training.ipynb
services/price_predictor/src/: api.py  baseline_model.py  config.py  feature_engineering.py  model_factory.py  predictor.py  training.py
services/price_predictor/tools2/: pyproject.toml
services/price_predictor/tools2/tools2/: config.py
services/trade_producer/: .historical.env  .live.env  Dockerfile  Makefile  app.yaml  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: Trade.py  rest.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  app.yaml  pyproject.toml
services/trade_to_ohlc/src/: app.yaml  config.py  main.py
tools2/tools2/: ohlc_data_reader.py
