[tool.poetry]
name = "price-predictor"
version = "0.1.0"
description = ""
authors = ["Sebastian Ospina <sebasospina343@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tools2 = {path = "../../tools2", develop = true}
pydantic-settings = "^2.12.0"
pyarrow = "^22.0.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
