[tool.poetry]
name = "price-predictor"
version = "0.1.0"
description = ""
authors = ["Sebastian Ospina <sebasospina343@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tools2 = {path = "../../tools2", develop = true}
pydantic-settings = "^2.12.0"
pyarrow = "^22.0.0"
loguru = "^0.7.3"
scikit-learn = "^1.7.2"
ta-lib = "^0.6.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
