[tool.poetry]
name = "trade-to-ohlc"
version = "0.1.0"
description = ""
authors = ["Sebastian Ospina <sebasospina343@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quixstreams = "^3.23.1"
loguru = "^0.7.3"
pydantic-settings = ">=2.3,<2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
